# yggdrasil

./: Dockerfile  README.md  README.rst  alembic.ini  docker-compose.yml  pyproject.toml
tests/: test_yggdrasil.py
yggdrasil/: main.py  utils.py
yggdrasil/api/: deps.py
yggdrasil/api/api_v1/: api.py
yggdrasil/api/api_v1/endpoints/: items.py  login.py  users.py
yggdrasil/api/api_v1/routes/: items.py  login.py  users.py
yggdrasil/core/: config.py  security.py
yggdrasil/db/: base.py  session.py
yggdrasil/db/migrations/: env.py
yggdrasil/db/migrations/versions/: 5dbc0b0830de_first_revision.py
yggdrasil/db/repositories/: base.py  crud_item.py  crud_user.py
yggdrasil/models/domain/: item.py  user.py
