[tool.poetry]
name = "yggdrasil"
version = "0.1.0"
description = ""
authors = ["danuarta.wiratama <danuarta.wiratama@gdn-commerce.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
